# Fork of the original crate: https://github.com/intel/SGXDataCenterAttestationPrimitives

[package]
name = "teepot-tee-quote-verification-rs"
version = "0.3.0"
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/matter-labs/teepot"
homepage = "https://github.com/matter-labs/teepot"
description = "Fork of intel-tee-quote-verification-rs"

[dependencies]
serde = { version = "1", features = ["derive", "rc"] }

[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
intel-tee-quote-verification-sys = { version = "0.2.1" }
tdx-attest-rs = { version = "0.1.2", git = "https://github.com/intel/SGXDataCenterAttestationPrimitives.git", rev = "aa239d25a437a28f3f4de92c38f5b6809faac842" }
