[package]
name = "teepot"
description = "TEE utilities"
# no MIT license, because of copied code from:
# * https://github.com/enarx/enarx
# * https://github.com/enarx/sgx
license = "Apache-2.0"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[target.'cfg(not(all(target_os = "linux", target_arch = "x86_64")))'.dependencies]
dcap-qvl = "0.2.3"
chrono = "0.4.40"
bytes.workspace = true

[features]
default = ["quote_op"]
quote_op = ["dep:teepot-tee-quote-verification-rs"]

[dependencies]
anyhow.workspace = true
asn1_der.workspace = true
async-trait.workspace = true
bytemuck.workspace = true
clap.workspace = true
config.workspace = true
const-oid.workspace = true
enumset.workspace = true
futures = "0.3.31"
getrandom.workspace = true
hex.workspace = true
num-integer.workspace = true
num-traits.workspace = true
opentelemetry.workspace = true
opentelemetry-appender-tracing.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk.workspace = true
p256.workspace = true
pkcs8.workspace = true
reqwest.workspace = true
rsa.workspace = true
rustls.workspace = true
secp256k1 = { workspace = true, features = ["recovery"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha3.workspace = true
signature.workspace = true
teepot-tee-quote-verification-rs = { path = "../teepot-tee-quote-verification-rs", optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
x509-cert.workspace = true
zeroize.workspace = true

[dev-dependencies]
base64.workspace = true
testaso.workspace = true
tokio.workspace = true
tracing-test.workspace = true
